0026451: Crash importing STeP file

Add check for NULL.

Test case for issue CR26451